--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <h1>Website Under Maintenance</h1>
     <h2> You are on the correct website, <p style="font-weight: bold;">Monetiles</p></h2>
     <p>We are currently performing maintenance. Please check back soon.</p>
-    <p style="font-weight: bold;">थोड़ा सा सब्र रख भाई please।</p>
+    <p style="font-weight: bold;">थोड़ा सा सब्र रख भाई ।</p>
      <p>Please</p>
 </body>
 </html>
