--- a/maintenance.html
+++ b/maintenance.html
@@ -1,1 +1,9 @@
-<!doctype html><html lang=en><head><meta charset=UTF-8><meta name=viewport content="width=device-width,initial-scale=1"><title>Website Maintenance</title><style>body{font-family:Arial,sans-serif;text-align:center;padding:50px}h1{color:#333}p{color:#666}</style></head><body><h1>Website Under Maintenance</h1><h2> You are on the correct website, <p style=font-weight:700>Monetiles</p></h2><p>We are currently performing maintenance. Please check back soon.</p><p style=font-weight:700>थोड़ा सा सब्र रख भाई ।</p><p>Please</p></body></html>
+<!doctype html><html lang=en><head><!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-64G1P7NK1C"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-64G1P7NK1C');
+</script><meta charset=UTF-8><meta name=viewport content="width=device-width,initial-scale=1"><title>Website Maintenance</title><style>body{font-family:Arial,sans-serif;text-align:center;padding:50px}h1{color:#333}p{color:#666}</style></head><body><h1>Website Under Maintenance</h1><h2> You are on the correct website, <p style=font-weight:700>Monetiles</p></h2><p>We are currently performing maintenance. Please check back soon.</p><p style=font-weight:700>थोड़ा सा सब्र रख भाई ।</p><p>Please</p></body></html>
